Added sample images

--- a/Plain.Rmd
+++ b/Plain.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ## Clockboard Map
-[![Click for full-size image](work/wk3_plot7.jpg)](https://c-voulgaris.github.io/portfolio_examples/work/wk3_plot.jpg){target="_blank"}
+[![](work/wk3_plot7.jpg)](https://c-voulgaris.github.io/portfolio_examples/work/wk3_plot.jpg){target="_blank"}
 
 # Maps of San Luis Obispo
 
