--- a/architect.Rmd
+++ b/architect.Rmd
@@ -2,7 +2,9 @@
 title: "Example Portfolio"
 author: "Carole Voulgaris"
 date: "10/12/2021"
-output: html_document
+output: 
+  prettydoc::html_pretty:
+    theme: architect
 ---
 
 ```{r setup, include=FALSE}
@@ -11,7 +13,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is an example of a portfolio that someone might assemble to demonstrate the skills they have developed in VIS 2128. I have created this page using RMarkdown. There are fancier tools out there for creating and hosting webpages, and you are welcome to use any of those if you like. The advantage of this approach is that you can create your webpage directly from RStudio.
 
-This example uses the default theme, since I haven't specified a theme in the YAML header.
+This example uses the `architect` theme, which is available if you install the `prettydoc` package. The `prettydoc` themes don't have the option to add a table of contents (as far as I can tell). 
+
+Other themes available from the `prettydoc` package are: `cayman`, `tactile`, `leonids`, and `hpstr`.
 
 Your portfolio should demonstrate each of the following skills (not all of which are demonstrated in this example):
 
