--- a/downcute_TOC.Rmd
+++ b/downcute_TOC.Rmd
@@ -2,16 +2,21 @@
 title: "Example Portfolio"
 author: "Carole Voulgaris"
 date: "10/12/2021"
-output: html_document
+output: 
+  rmdformats::downcute
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Introduction
+
 This is an example of a portfolio that someone might assemble to demonstrate the skills they have developed in VIS 2128. I have created this page using RMarkdown. There are fancier tools out there for creating and hosting webpages, and you are welcome to use any of those if you like. The advantage of this approach is that you can create your webpage directly from RStudio.
 
-This example uses the default theme, since I haven't specified a theme in the YAML header.
+This example uses the `downcute` theme, which is available if you install the `rmdformats` package. The themes in the `rmdformats` have a table of contents that only includes level-one headings.
+
+Other themes in the `rmdformats` package are `material`, `html_clean`, `html_docco`, `readthedown`, and `robobook`.  
 
 Your portfolio should demonstrate each of the following skills (not all of which are demonstrated in this example):
 
