--- a/journal_TOC.Rmd
+++ b/journal_TOC.Rmd
@@ -2,7 +2,12 @@
 title: "Example Portfolio"
 author: "Carole Voulgaris"
 date: "10/12/2021"
-output: html_document
+output: 
+  html_document:
+    theme: journal
+    toc: true
+    toc_depth: 3
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
@@ -11,7 +16,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is an example of a portfolio that someone might assemble to demonstrate the skills they have developed in VIS 2128. I have created this page using RMarkdown. There are fancier tools out there for creating and hosting webpages, and you are welcome to use any of those if you like. The advantage of this approach is that you can create your webpage directly from RStudio.
 
-This example uses the default theme, since I haven't specified a theme in the YAML header.
+This example uses the `journal` theme, which is available by default.
+
+There are 12 themes available by default: `cerulean`, `cosmo`, `flatly`, `journal`, `lumen`, `paper`, `readable`, `sandstone`, `simplex`, `spacelab`, `united`, and `yeti`.
 
 Your portfolio should demonstrate each of the following skills (not all of which are demonstrated in this example):
 
