--- a/portfolio_fin.Rmd
+++ b/portfolio_fin.Rmd
@@ -26,14 +26,24 @@ This interactive map shows the percentage of households countywide with children
 [![](images/interactive_thumbnail.png)](https://michaeljohnson8971.github.io/portfolio_examples/web_resources/interactivemap_Suffolk_families_children.html){target="_blank"}
 
 ## Zonal Aggregation Map
-Map#1  shows the trees within 500 meters of schools across the city of Boston. It also notes the percentage of total trees within 500 meters of all school. 
+###Map #1  shows the trees within 500 meters of schools across the city of Boston. It also notes the percentage of total trees within 500 meters of all school. 
 * demonstrates the following skills: Calculating and displaying relationships among point and polygon layers based on distance
 
-###Map Boston Tree and Schools
+###Map #2 Boston Tree and Schools
 Map#2 shows the count of schools per community area in Boston
-[![](images/school_concentration.png)](https://c-voulgaris.github.io/portfolio_examples/fullsize/clockboard.pdf){target="_blank"}
+*demonstrates aggregating points to a polygon
+[![](images/school_concentration.png)](https://github.com/michaeljohnson8971/portfolio_examples/blob/main/images/school_concentration.png){target="_blank"}
 
-### Maps of San Luis Obispo
+## Accessibility
+This map shows accessibility based on a distance-decay function of the walking time to the nearest transit stop. It demonstrates the following skills:
+
+* Displaying multiple vector layers on the same map
+* Calculating and displaying accessibility, based on travel time
+* Displaying raster data on a map
+
+[![](thumbnails/SLO_raster.png)](https://cO_transit.pdf){target="_blank"}
+
+## Maps of San Luis Obispo
 Here are two maps of San Luis Obispo, California. I might include some text here as well.
 
 ## Isochrones
@@ -44,11 +54,4 @@ This map shows isochrones based on transit travel times to the nearest school. I
 
 [![](thumbnails/SLO_isochrone.png)](https://c-x_schools.pdf){target="_blank"}
 
-## Accessibility
-This map shows accessibility based on a distance-decay function of the walking time to the nearest transit stop. It demonstrates the following skills:
 
-* Displaying multiple vector layers on the same map
-* Calculating and displaying accessibility, based on travel time
-* Displaying raster data on a map
-
-[![](thumbnails/SLO_raster.png)](https://cO_transit.pdf){target="_blank"}
