did not catually commit last time
lets go

--- a/portfolio_fin.Rmd
+++ b/portfolio_fin.Rmd
@@ -20,10 +20,10 @@ knitr::opts_chunk$set(echo = TRUE)
 Here are two maps of Boston. I might include some text here about this set of maps.
 
 ## Interactive Map
-This interactive map shows the percentage of households countywide with children as a poprotion of the total count of households in Suffolk county. 
+This interactive map shows the percentage of households countywide with children as a proportion of the total count of households in Suffolk county. 
 * demonstrates the following skills: Displaying data on an interactive map
 
-[![](images/interactive_thumbnail.png)](https://michaeljohnson8971.github.io/portfolio_examples/web_resources/interactivemap_Suffolk_families_children.html){target="_blank"}
+[![](images/interactive_thumbnail.png)](web_resources/interactivemap_Suffolk_families_children.html){target="_blank"}
 
 ## Zonal Aggregation Map
 ###Map #1  shows the trees within 500 meters of schools across the city of Boston. It also notes the percentage of total trees within 500 meters of all school. 
