--- a/portfolio_fin.Rmd
+++ b/portfolio_fin.Rmd
@@ -42,17 +42,12 @@ This map shows accessibility based on a distance-decay function of the walking t
 * Calculating and displaying accessibility, based on travel time
 * Displaying raster data on a map
 
-[![](thumbnails/SLO_raster.png)](https://cO_transit.pdf){target="_blank"}
+[![](images/Chicago_transit.png)](https://cO_transit.pdf){target="_blank"}
 
-## Maps of San Luis Obispo
-Here are two maps of San Luis Obispo, California. I might include some text here as well.
+## Maps of East Boston
+Here is a  historical map of East Boston with current boundaries and highway overlaid.
+* Geo-referencing a raster image
 
-## Isochrones
-This map shows isochrones based on transit travel times to the nearest school. It demonstrates the following skills:
-
-* Displaying multiple vector layers on the same map
-* Calculating and displaying accessibility, based on travel time
-
-[![](thumbnails/SLO_isochrone.png)](https://c-x_schools.pdf){target="_blank"}
+[![](images/Map_clean_MJ.jpg)](https://c-x_schools.pdf){target="_blank"}
 
 
